# led

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  clippy.toml  theme.toml
crates/buffer/: Cargo.toml
crates/buffer/queries/markdown/: injections.scm
crates/buffer/queries/rust/: indents.scm  outline.scm
crates/buffer/src/: color_hint.rs  component.rs  editing.rs  lib.rs  search.rs  syntax.rs  undo.rs  watcher.rs  wrap.rs
crates/core/: Cargo.toml
crates/core/src/: alert.rs  color.rs  command.rs  component.rs  config.rs  content_hash.rs  doc.rs  ext.rs  fanout.rs  file_status.rs  git.rs  golden_trace.rs  grapheme.rs  ids.rs  issue.rs  keys.rs  language.rs  lib.rs  logging.rs  lsp_types.rs  notify.rs  path.rs  paths.rs  rx.rs  text_input.rs  theme.rs  types.rs  versioned.rs  watch.rs  wrap.rs
crates/driver-buffers/core/: Cargo.toml
crates/driver-buffers/core/src/: lib.rs
crates/fake-gh/: Cargo.toml
crates/fake-lsp/: Cargo.toml
crates/fake-lsp/src/: main.rs
crates/file-search/: Cargo.toml
crates/file-search/src/: lib.rs  search.rs  types.rs  ui.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: component.rs  convert.rs  lib.rs  manager.rs  registry.rs  server.rs  transport.rs  types.rs  util.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  diag_offer.rs  dispatch.rs  keymap.rs  lib.rs  query.rs  theme.rs  trace.rs
crates/runtime/src/apply/: edit.rs  fs.rs  lsp.rs  mod.rs  session.rs
crates/runtime/src/dispatch/: browser.rs  code_actions.rs  completions.rs  cursor.rs  edit.rs  file_search.rs  find_file.rs  isearch.rs  kill.rs  mark.rs  mod.rs  nav.rs  reflow.rs  rename.rs  save.rs  shared.rs  sort_imports.rs  tabs.rs  testutil.rs  undo.rs
crates/runtime/src/phases/: dispatch_phase.rs  execute_phase.rs  file_watch_dispatch.rs  git_dispatch.rs  ingest.rs  lsp_dispatch.rs  mod.rs  query_phase.rs  render_phase.rs  session_dispatch.rs  wait_phase.rs
crates/runtime/src/query/: actions.rs  browser.rs  desired.rs  inputs.rs  mod.rs
crates/runtime/src/theme/: apply.rs  mod.rs  parse.rs
crates/state-alerts/: Cargo.toml
crates/state-alerts/src/: lib.rs
crates/state-browser/: Cargo.toml
crates/state-browser/src/: lib.rs
crates/state-clipboard/: Cargo.toml
crates/state-clipboard/src/: lib.rs
crates/state-completions/: Cargo.toml
crates/state-completions/src/: lib.rs
crates/state-diagnostics/: Cargo.toml
crates/state-diagnostics/src/: lib.rs
crates/state-file-search/: Cargo.toml
crates/state-file-search/src/: lib.rs
crates/state-find-file/: Cargo.toml
crates/state-find-file/src/: lib.rs
crates/state-git/: Cargo.toml
crates/state-git/src/: lib.rs
crates/state-isearch/: Cargo.toml
crates/state-isearch/src/: lib.rs
crates/state-jumps/: Cargo.toml
crates/state-jumps/src/: lib.rs
crates/state-kbd-macro/: Cargo.toml
crates/state-kbd-macro/src/: lib.rs
crates/state-kill-ring/: Cargo.toml
crates/state-kill-ring/src/: lib.rs
crates/state-lifecycle/: Cargo.toml
crates/state-lifecycle/src/: lib.rs
crates/state-lsp/: Cargo.toml
crates/state-lsp/src/: lib.rs
crates/state-session/: Cargo.toml
crates/state-session/src/: lib.rs
crates/state-syntax/: Cargo.toml
crates/state-syntax/queries/javascript/: indents.scm
crates/state-syntax/queries/json/: indents.scm
crates/state-syntax/queries/rust/: imports.scm  indents.scm
crates/state-syntax/queries/toml/: indents.scm
crates/state-syntax/src/: import.rs  indent.rs  lib.rs
crates/syntax/: Cargo.toml
crates/syntax/queries/bash/: indents.scm
crates/syntax/queries/c/: brackets.scm
crates/syntax/queries/javascript/: brackets.scm  indents.scm
crates/syntax/queries/json/: brackets.scm
crates/syntax/queries/python/: indents.scm
crates/syntax/queries/rust/: brackets.scm  injections.scm
crates/syntax/queries/swift/: brackets.scm  indents.scm
crates/syntax/queries/toml/: brackets.scm
crates/syntax/src/: bracket.rs  config.rs  highlight.rs  import.rs  indent.rs  injection.rs  language.rs  lib.rs  modeline.rs  outline.rs  parse.rs  state.rs
crates/text-reflow/: Cargo.toml
crates/text-reflow/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: db.rs  lib.rs
goldens/: Cargo.toml
goldens/scenarios/actions/abort/: frame.snap  script.txt
goldens/scenarios/actions/collapse_all/: dispatched.snap  frame.snap  script.txt  setup.toml
goldens/scenarios/actions/collapse_dir/: dispatched.snap  frame.snap  script.txt  setup.toml
goldens/scenarios/actions/delete_backward/: frame.snap  script.txt
goldens/scenarios/actions/delete_forward/: frame.snap  script.txt  setup.toml
goldens/scenarios/actions/expand_dir/: dispatched.snap  script.txt
goldens/scenarios/actions/file_end/: frame.snap  script.txt
goldens/scenarios/actions/file_start/: frame.snap  script.txt
goldens/scenarios/actions/find_file/: dispatched.snap  frame.snap  script.txt  setup.toml
goldens/scenarios/actions/in_buffer_search/: frame.snap  script.txt  setup.toml
goldens/scenarios/actions/insert_char/: frame.snap  script.txt  setup.toml
goldens/scenarios/actions/insert_newline/: frame.snap  script.txt
goldens/scenarios/actions/quit/: script.txt
goldens/src/: keys.rs  lib.rs  scenario.rs
goldens/tests/: actions.rs  config_keys.rs  driver_events.rs  edge.rs  features.rs  keybindings.rs  smoke.rs
led/: Cargo.toml
led/src/: buffer.rs  config.rs  default_theme.toml  derived.rs  editor.rs  file_browser.rs  golden_trace.rs  lib.rs  logger.rs  logging.rs  main.rs  model.rs  picker.rs  session.rs  shell.rs  theme.rs  ui.rs
led/src/model/: action.rs  actions_of.rs  alerts.rs  alerts_of.rs  buffers_of.rs  edit.rs  editing_of.rs  file_search.rs  find_file.rs  find_file_of.rs  gh_pr_of.rs  isearch_of.rs  jump.rs  jump_of.rs  keymap_of.rs  kill_of.rs  lsp_of.rs  mod.rs  mov.rs  movement_of.rs  nav_of.rs  process_of.rs  reflow.rs  reflow_of.rs  save_of.rs  search.rs  session_of.rs  sync_of.rs  ui_actions_of.rs
led/tests/: integration.rs
led/tests/fake-gh/: Cargo.toml
led/tests/fake-lsp/: Cargo.toml
led/tests/harness/: mod.rs  two_instance.rs
(+887 files in other folders)
