[workspace]
resolver = "2"
members = []
exclude = ["goldens"]

[workspace.dependencies]
# Internal crate paths will be added here as crates are grown
# per docs/rewrite/QUERY-ARCH.md § "Multi-crate organization".

# External dependencies carried over from the legacy workspace.
# Trim or update as the rewrite actually uses them.
arboard = { version = "3", default-features = false }
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29" }
dirs = "6"
dprint-plugin-markdown = "0.21.1"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
libc = "0.2"
log = "0.4"
lsp-types = "0.97"
notify = "7"
nucleo-matcher = "0.3"
open = "5"
pin-project-lite = "0.2"
ratatui = "0.30"
regex = "1"
regex-syntax = "0.8"
rmp-serde = "1"
ropey = "1.6"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread", "fs"] }
tokio-util = "0.7.18"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
