[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/state-tabs",
    "crates/state-buffer-edits",
    "crates/state-kill-ring",
    "crates/state-alerts",
    "crates/state-clipboard",
    "crates/state-jumps",
    "crates/state-browser",
    "crates/state-find-file",
    "crates/driver-buffers/core",
    "crates/driver-buffers/native",
    "crates/driver-terminal/core",
    "crates/driver-terminal/native",
    "crates/driver-clipboard/core",
    "crates/driver-clipboard/native",
    "crates/driver-fs-list/core",
    "crates/driver-fs-list/native",
    "crates/driver-find-file/core",
    "crates/driver-find-file/native",
    "crates/runtime",
    "crates/fake-lsp",
    "crates/fake-gh",
    "led",
]
exclude = ["goldens"]

[workspace.dependencies]
# Internal crates (per docs/rewrite/MILESTONE-1.md § "Crate layout").
led-core = { path = "crates/core" }
led-state-tabs = { path = "crates/state-tabs" }
led-state-buffer-edits = { path = "crates/state-buffer-edits" }
led-state-kill-ring = { path = "crates/state-kill-ring" }
led-state-alerts = { path = "crates/state-alerts" }
led-state-clipboard = { path = "crates/state-clipboard" }
led-state-jumps = { path = "crates/state-jumps" }
led-state-browser = { path = "crates/state-browser" }
led-state-find-file = { path = "crates/state-find-file" }
led-driver-buffers-core = { path = "crates/driver-buffers/core" }
led-driver-buffers-native = { path = "crates/driver-buffers/native" }
led-driver-terminal-core = { path = "crates/driver-terminal/core" }
led-driver-terminal-native = { path = "crates/driver-terminal/native" }
led-driver-clipboard-core = { path = "crates/driver-clipboard/core" }
led-driver-clipboard-native = { path = "crates/driver-clipboard/native" }
led-driver-fs-list-core = { path = "crates/driver-fs-list/core" }
led-driver-fs-list-native = { path = "crates/driver-fs-list/native" }
led-driver-find-file-core = { path = "crates/driver-find-file/core" }
led-driver-find-file-native = { path = "crates/driver-find-file/native" }
led-runtime = { path = "crates/runtime" }

# drv = the memoization / query primitive.
drv = { path = "../drv/drv", features = ["imbl"] }
imbl = "7"

# External dependencies carried over from the legacy workspace.
# Trim or update as the rewrite actually uses them.
arboard = { version = "3", default-features = false }
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29" }
dirs = "6"
dprint-plugin-markdown = "0.21.1"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
libc = "0.2"
log = "0.4"
lsp-types = "0.97"
notify = "7"
nucleo-matcher = "0.3"
open = "5"
pin-project-lite = "0.2"
ratatui = "0.30"
regex = "1"
regex-syntax = "0.8"
rmp-serde = "1"
ropey = "1.6"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread", "fs"] }
tokio-util = "0.7.18"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
