[package]
name = "led-goldens"
version = "0.0.0"
edition = "2024"
publish = false

# Intentionally NOT a member of the led workspace (see root Cargo.toml's
# `exclude`). Goldens are black-box subprocess tests and must not import
# from led-* crates. The only contract with led is its CLI surface and
# (later) its trace-file format.

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
