[package]
name = "led"
version = "0.1.0"
edition = "2024"

[dependencies]
led-config-file = { workspace = true }
led-core = { workspace = true }
led-state = { workspace = true }
led-workspace = { workspace = true }
led-terminal-in = { workspace = true }
led-docstore = { workspace = true }
led-ui = { workspace = true }
led-timers = { workspace = true }
led-fs = { workspace = true }

led-clipboard = { workspace = true }
led-file-search = { workspace = true }
led-git = { workspace = true }
led-syntax = { workspace = true }
led-lsp = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
env_logger = "0.11"
libc = { workspace = true }
log = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
notify = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
