[package]
name = "led"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "led"
path = "src/main.rs"

[dependencies]
led-core = { workspace = true }
led-state-tabs = { workspace = true }
led-state-buffer-edits = { workspace = true }
led-state-kill-ring = { workspace = true }
led-state-alerts = { workspace = true }
led-state-jumps = { workspace = true }
led-state-browser = { workspace = true }
led-driver-buffers-core = { workspace = true }
led-driver-terminal-core = { workspace = true }
led-driver-terminal-native = { workspace = true }
led-runtime = { workspace = true }
clap = { workspace = true }
