[package]
name = "led_buffer"
version = "0.1.0"
edition = "2024"

[dependencies]
led_core = { workspace = true }
ratatui = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
twox-hash = { workspace = true }
rusqlite = { workspace = true }
