[package]
name = "led_buffer"
version = "0.1.0"
edition = "2024"

[dependencies]
led_core = { workspace = true }
ratatui = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
twox-hash = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
