[package]
name = "led_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
led_core = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
ratatui = { workspace = true }
ropey = { workspace = true }
log = "0.4"
