[package]
name = "led-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
led-core = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
log = { workspace = true }
nucleo-matcher = { workspace = true }
notify = { workspace = true }
globset = { workspace = true }
