[package]
name = "led-runtime"
version = "0.0.0"
edition = "2024"
publish = false

# Desktop wiring crate. Owns:
#
# - The event enum + dispatch (which mutates driver atoms in response
#   to input events).
# - The query layer: standalone `#[drv::lens]` declarations projecting
#   every driver's atom, and the cross-atom memos that combine them
#   into `LoadAction`s and `Frame`s.
# - The `Trace` trait + `SharedTrace` file sink.
# - The `run` main loop: ingest → query → execute → render.
# - `spawn_drivers` convenience for the desktop `*-native` workers.
#
# Mobile targets would replace this crate with their own runtime wiring
# around the same `*-core` crates.

[dependencies]
led-core = { workspace = true }
led-state-tabs = { workspace = true }
led-state-buffer-edits = { workspace = true }
led-state-kill-ring = { workspace = true }
led-state-clipboard = { workspace = true }
led-state-alerts = { workspace = true }
led-state-jumps = { workspace = true }
led-state-browser = { workspace = true }
led-state-find-file = { workspace = true }
led-state-file-search = { workspace = true }
led-state-isearch = { workspace = true }
led-state-syntax = { workspace = true }
led-driver-fs-list-core = { workspace = true }
led-driver-fs-list-native = { workspace = true }
led-driver-find-file-core = { workspace = true }
led-driver-find-file-native = { workspace = true }
led-driver-file-search-core = { workspace = true }
led-driver-file-search-native = { workspace = true }
led-driver-buffers-core = { workspace = true }
led-driver-buffers-native = { workspace = true }
led-driver-terminal-core = { workspace = true }
led-driver-terminal-native = { workspace = true }
led-driver-clipboard-core = { workspace = true }
led-driver-clipboard-native = { workspace = true }
led-driver-syntax-core = { workspace = true }
led-driver-syntax-native = { workspace = true }
drv = { workspace = true }
imbl = { workspace = true }
ropey = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
