[package]
name = "led-state-browser"
version = "0.0.0"
edition = "2024"
publish = false

# Session-global user-decision source: the file-browser sidebar.
# Holds the workspace root, per-directory listings cache, expansion
# state, selection, and the flattened `entries` list the painter
# consumes. No driver — the FS driver fills dir_contents; dispatch
# mutates expansion/selection; rebuild_entries recomputes the flat
# view.

[dependencies]
led-core = { workspace = true }
imbl = { workspace = true }
