[package]
name = "led-state-find-file"
version = "0.0.0"
edition = "2024"
publish = false

# Find-file / save-as overlay state. Modal: when `Option<FindFileState>`
# is `Some`, dispatch routes every key through the overlay and the
# status bar swaps from its normal content to a `Find file: <input>`
# or `Save as: <input>` prompt. Completions come from
# `driver-find-file` as prefix-filtered directory listings.

[dependencies]
drv = { workspace = true }
led-core = { workspace = true }
led-driver-find-file-core = { workspace = true }
led-state-tabs = { workspace = true }
dirs = { workspace = true }
