[package]
name = "led-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
led-core = { workspace = true }
led-state = { workspace = true }

regex = { workspace = true }
ropey = { workspace = true }
tokio = { workspace = true }

tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-make = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-typescript = { workspace = true }

log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
