[package]
name = "led-workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
led-core = { workspace = true }
log = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
